$Id: NEWS,v 1.823 2007-06-04 23:53:11 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2875 - Malformed getopt checks cause compilation errors in getopt.c.
- Bug 2877 - ServerType 'inetd' results in "getnameinfo error: ai_family not
  supported" errors in log.
- Bug 2878 - Error compiling proftpd on Solaris 2.9 using --with-lastlog.
- Bug 2881 - ProFTPD does not support OPTS UTF8 command when --enable-nls is
  used.
- Bug 2883 - Problem with locale and SQL database queries.
- Bug 2893 - ProFTPD can use the wrong group data if the user name changes.
- Bug 2897 - mod_quotatab subtracts size of deleted file from bytes-transferred
  tally.
- Bug 2902 - Stack read overrun in mod_xfer on 32bit platform.  Use an
  explicit compiler cast to ensure that the proper data type size is used
  in the arguments for a variadic function.
- Bug 2906 - RewriteCondition backreferences not properly substituted.
- Bug 2913 - TYPE command does not clear ASCII flag from LIST/NLST commands.
- Bug 2911 - NLST on a nonexistent path, followed by an NLST on an existing
  file, causes segfault.
- Bug 2922 - Auth API allows one auth module to authenticate user data provided
  by a different auth module.
- Bug 2921 - NLST fails if using POSIX ACLs.  The mod_ls module, when
  handling the NLST command, was using an unnecessary access(2) check.
- Bug 2864 - DisplayLogin should work regardless of chroot.  This now works
  for DisplayQuit and DisplayTransferFiles as well.
- Bug 2920 - ABOR command not handled during data transfer.
- Bug 2924 - DeleteAbortedStores doesn't work when the ABOR command is used.